--- a/src/app/components/playlist-page/playlist-page.component.scss
+++ b/src/app/components/playlist-page/playlist-page.component.scss
@@ -319,7 +319,7 @@
   .sponsored-ad-image {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 8px;
     display: block;
   }
